--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.AddFreezerActivity" />
-        <activity android:name=".activities.FreezersActivity"></activity>
+        <activity android:name=".activities.FreezersActivity" />
+        <activity android:name=".activities.FreezerFoodActivity" />
+        <activity
+            android:name=".activities.BaseActivity"
+            android:label="@string/title_activity_base"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
